--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
         </script>
     -->
     </head>
-    <body style="background-color:indigo">
+    <body style="background-color:rgb(197, 142, 236)">
         <h1 style="font-family: 'Courier New', Courier, monospace; color:crimson">Welcome to Html JavaScript at NEIT</h1>
-        <p>hello how are you</p>
+        <p>Below are a list of links to all class files</p>
+        <ul>
+            <li>Week 1</li>
+            <li>Week 2</li>
+            <li>Week 3</li>
+            <li>Week 4</li>
+        </ul>
     </body>
 </html>
 
