--- a/index.html
+++ b/index.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <!--
-            Mason Gagnon
-            Se111.03
-            Jan 9 2024
-        -->
-        <title>HTML JavaScript Winter 2024</title>
-        <meta charset="UTF-8">
-        <!--script src="script.js"></script>
-        <script>
-            alert("Hello world")
-        </script>
-    -->
-    </head>
-    <body style="background-color:rgb(197, 142, 236)">
-        <h1 style="font-family: 'Courier New', Courier, monospace; color:crimson">Welcome to Html JavaScript at NEIT</h1>
-        <p>Below are a list of links to all class files</p>
-        <ul>
-            <li>Week 1</li>
-            <li>Week 2</li>
-            <li>Week 3</li>
-            <li>Week 4</li>
-        </ul>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <meta name="description" content="Week 1">
+    <meta name="author" content="Mason Gagnon">
+</head>
+<body style="background-color:rgb(114, 20, 180)">
+    <h1>
+        Mason Gagnon
+    </h1>
+    <p style="font-family: 'Courier New', Courier, monospace; color:rgb(169, 164, 2)">
+        Im <i>Mason</i> Im from <b>Coventry</b> Im studying
+        <u>Cybersecurity</u>, I hope to one day be either 
+        a penetration tester for a private company
+        or work with law enforcement doing digital forensice, 
+        possibly even counter intelligence counter terrorim
+    </p>
+
+
+
+
+</body>
 </html>
-
-
