--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         Im <i>Mason</i> Im from <b>Coventry</b> Im studying
         <u>Cybersecurity</u>, I hope to one day be either 
         a penetration tester for a private company
-        or work with law enforcement doing digital forensice, 
+        or work with law enforcement doing digital forensics, 
         possibly even counter intelligence counter terrorim
     </p>
 
