--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Week 1 Lab HTML JavaScript</title>
     <meta name="description" content="Week 1">
     <meta name="author" content="Mason Gagnon">
 </head>
