--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="author" content="Mason Gagnon">
 </head>
 <body style="background-color:rgb(114, 20, 180)">
-    <h1>
-        Mason Gagnon
-    </h1>
+    <div>
+    <h1>Mason Gagnon</h1>
+    </div>
     <p style="font-family: 'Courier New', Courier, monospace; color:rgb(169, 164, 2)">
         Im <i>Mason</i> Im from <b>Coventry</b> Im studying
         <u>Cybersecurity</u>, I hope to one day be either 
