--- a/index.html
+++ b/index.html
@@ -12,13 +12,9 @@
     <h1>Mason Gagnon</h1>
     </div>
     <p style="font-family: 'Courier New', Courier, monospace; color:rgb(169, 164, 2)">
-        Im <i>Mason</i> Im from <b>Coventry</b> Im studying
-        <u>Cybersecurity</u>, I hope to one day be either 
-        a penetration tester for a private company
-        or work with law enforcement doing digital forensics, 
-        possibly even counter intelligence counter terrorim
+        Im <i>Mason</i>, Im from <b>Coventry</b>, Im studying <u>Cybersecurity</u>, I hope to one day be either a penetration tester for a private company or work with law enforcement doing <em>digital forensics</em>, possibly even <strong>counter intelligence counter terrorim</strong>.
     </p>
-
+    <hr> <!-- Horizontal line -->
 
 
 
