--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     </p>
     <hr> <!-- Horizontal line -->
 
+<a href="https://www.youtube.com">Link To YouTube</a>
+<a href="../index.html">Link To Main Page</a>
 
 
 </body>
